--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Swoosh</string>
     <string name="image_initiale">Image_initiale</string>
+    <string name="logo_swoosh">Logo Swoosh</string>
 
 </resources>
