--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,13 @@
     <string name="find_a_team_in_you_city_and_dominate_the_league">Find a team in you city and dominate the league</string>
     <string name="get_started">GET STARTED</string>
     <string name="TexteGoAllin">Premiere ligne titre</string>
+    <string name="i_am_a">I am a:</string>
+    <string name="biginner">BIGINNER</string>
+    <string name="beginer">BEGINNER</string>
+    <string name="beginner">BEGINNER</string>
+    <string name="baler">BALLER</string>
+    <string name="balller">BALLER</string>
+    <string name="baller">BALLER</string>
+    <string name="finish">FINISH</string>
 
 </resources>
