--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,6 @@
     <string name="co_ed_other">Co-Ed</string>
     <string name="go_all_in">GO ALL IN</string>
     <string name="on_going_all_out">ON GOING ALL OUT</string>
-    <string name="find_a_team_in_you_city_and_dominate_the_league">Find a team in you city and dominate the league</string>
     <string name="get_started">GET STARTED</string>
     <string name="TexteGoAllin">Premiere ligne titre</string>
     <string name="i_am_a">I am a:</string>
@@ -27,5 +26,6 @@
     <string name="search_league">Looking for a co-ed beginner league near you</string>
     <string name="beginner_toggle">beginner_toggle</string>
     <string name="baller_toggle">baller_toggle</string>
+    <string name="find_team">Find a team and dominate the league</string>
 
 </resources>
